<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/quiz_details_height"
    android:background="#8bc34a"
    android:paddingLeft="12dp">

    <TextView
        android:id="@+id/quiz_info_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/quiz_hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/quiz_unlock_button"

        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/quiz_hint"
        android:textColor="@color/black_54"
        android:textSize="12sp" />

    <Button
        android:id="@id/quiz_unlock_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/quiz_share_button"

        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/quiz_unlock"
        android:textColor="@color/black_54"
        android:textSize="12sp" />

    <Button
        android:id="@id/quiz_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/action_share"
        android:textColor="@color/black_54"
        android:textSize="12sp" />
</RelativeLayout>
